# pyo3_in_an_hour

./: Cargo.toml  README.md  pyproject.toml
assets/: algorithms.py  portraits.py
challenges/: README.md  stage_1.md  stage_2.md  stage_n.md
exercises/: 0_intro.md  1_basics.md  2_paper.md  3_standalone_fn.md  4_fax.md  5_dunder_methods.md  6_ai_algorithms.md  stage_5.md
guidance/: README.md  stage_1.md  stage_2.md  stage_m.md
python/: 1_basics.py  1_paper.py  2_fax.py  2_paper.py  3_standalone_fn.py  4_fax.py  5_dunder_methods.py  6_ai_algorithms.py  algorithms.py  try.py
reading/: reading_classes.md  reading_dunder_methods.md  reading_functions.md  reading_performance.md
src/: ai_algorithms.rs  employees.rs  lib.rs  machine.rs  paper.rs
stages/: stage1.md  stage4.md
tests/: 1_paper.py  2_fax.py
